--- a/KOJS2.html
+++ b/KOJS2.html
@@ -6,7 +6,7 @@
 <body>
    <!-- This is called "view" of HTML markup that defines the appearance of UI -->
 
-   <p>Enter your name: <input data-bind="value: yourName" /></p>
+   <p>Ingresa tu nombre: <input data-bind="value: yourName" /></p>
    <p>Hi <strong data-bind="text: yourName"></strong> Good Morning!!!</p>
 
    <script>
